--- a/mysite/carco2/templates/carco2.html
+++ b/mysite/carco2/templates/carco2.html
@@ -1,1 +1,11 @@
-<h1>Hello, Configurator!</h1>
+{% block page_content %}
+
+<h1>Hello, Configurator! Hey</h1>
+
+<form action="/your-name/" method="post">
+    <label for="your_name">Your name: </label>
+    <input id="your_name" type="text" name="your_name" value="{{ current_name }}">
+    <input type="submit" value="OK">
+</form>
+
+{% endblock %}
